load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["ghsnippets.go"],
    importpath = "k8s.io/test-infra/experiment/ghsnippets",
    visibility = ["//visibility:private"],
    deps = [
        "//vendor/github.com/google/go-github/v24/github:go_default_library",
        "//vendor/golang.org/x/oauth2:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "ghsnippets",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
